Fixed bug #384 - tightened up white space in study view

--- a/src/feeddb/feed/static/src/less/custom.less
+++ b/src/feeddb/feed/static/src/less/custom.less
@@ -427,6 +427,13 @@ body { background: url('../../../../../images/satinweave.png'); color: @navy; co
     aside {
       .upload-steps { border-left: 0; }
     }
+    #study_form {
+      fieldset {
+        .row { margin-bottom: 10px;
+          label { margin: 0; }
+        }
+      }
+    }
   }
   #ui-datepicker-div { background: @white; background: @white-alpha; border: 1px solid @tan; border: 1px solid @tan-alpha;
     .ui-datepicker-prev-hover, .ui-datepicker-next-hover { top: 2px; }
